--- a/css/tablesorter.css
+++ b/css/tablesorter.css
@@ -15,11 +15,11 @@ th, td {
 th {
 	font-weight: bold;
 	border-bottom: 2px solid #BBB;
-	background: url(img/tablesorter-normal.gif) no-repeat 100% 50% #eee;
+	background: url(../img/tablesorter-normal.gif) no-repeat 100% 50% #eee;
 }
 .asc {
-	background: url(img/tablesorter-asc.gif) no-repeat 100% 50% #eee;
+	background: url(../img/tablesorter-asc.gif) no-repeat 100% 50% #eee;
 }
 .desc {
-	background: url(img/tablesorter-desc.gif) no-repeat 100% 50% #eee;
+	background: url(../img/tablesorter-desc.gif) no-repeat 100% 50% #eee;
 }
